<resources>
    <string name="app_name">Mataku</string>
    <string name="selmat_datang">Welcome !</string>
    <string name="masukan_data">Enter your personal data.</string>
    <string name="silakan_login">Please login to enter the application</string>
    <string name="hai">Hi !</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="masuk">Sign in</string>
    <string name="daftar">Register</string>
    <string name="cek_mata">Eye Check</string>
    <string name="penguna_baru">New user? Registration</string>
    <string name="punya_akun">Have an account? Sign in</string>
    <string name="dokter">Doctor</string>
    <string name="rumah_sakit">The nearest hospital</string>
    <string name="coba_tebak">Try to guess correctly \nthe numbers that appear</string>
    <string name="konsultasi">Submit a Consultation</string>
    <string name="batal">Cancel</string>
    <string name="menunggu">Waiting for confirmation</string>
    <string name="terhubung">Connected</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="tidak_ada_foto">No picture</string>
    <string name="kamera">&#160;Camera</string>
    <string name="galeri">&#160;Gallery</string>
    <string name="hasil">Results</string>
    <string name="jauhkan_perangkat">Keep the device about 30 cm</string>
    <string name="mata_kiri">Left eye</string>
    <string name="mata_kanan">Right eye</string>
    <string name="ambil_foto">take a photo of one of your eyes \n and right when the photos taken are straight, clear and clear \n so that the results are more accurate</string>
    <string name="name">Name</string>
    <string name="pterigium">Pterygium</string>
    <string name="buta_warna">Color blind</string>
    <string name="miopi">Miopi</string>
    <string name="katarak">Cataract</string>
    <string name="cpassword">Password Confirmation</string>
    <string name="kdokter">Consultation</string>
    <string name="favorit">Favorite</string>
    <string name="notifikasi">Notification</string>
    <string name="log">Note</string>
    <string name="review">Review</string>
    <string name="service">Service</string>
    <string name="setting">Setting</string>
    <string name="update">Update</string>
    <string name="ubah">Change Password</string>
    <string name="passwordold">Old password</string>
    <string name="passwordnew">New password</string>
    <string name="cpasswordbaru">Confirm New Password</string>
    <string name="cancel">Cancel</string>
    <string name="ajukan">Submit a Consultation</string>
    <string name="keterangan">Text Review</string>
    <string name="logout">Sign out</string>
    <string name="terima">Accept</string>
    <string name="hapus">Delete</string>
    <string name="accuracy">Level of accuracy : %d%%</string>
    <string name="pilih_mata">Choose Eyes</string>
    <string name="kembali">Back</string>
    <string name="tidak_tau">Do not know</string>
    <string name="hasil_butawarna">Color Blind Results: Correct</string>
    <string name="hasil_miopi">Miopi Results: Correct</string>
    <string name="of_test">of 10 tests</string>
    <string-array name="huruf">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string-array name="angka">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
</resources>
