<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorwhite"
        tools:context=".ui.notifikasi.NotifikasiActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/size_4dp"
                android:layout_height="?attr/actionBarSize">
            <ImageView
                    android:layout_width="@dimen/size_30dp"
                    android:layout_height="@dimen/size_30dp"
                    app:srcCompat="@drawable/ic_back_w" android:id="@+id/ui_back"
            />
            <TextView
                    android:text="@string/setting"
                    android:textColor="@color/colorwhite"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/size_20dp"
                android:gravity="center|top"
                android:layout_height="match_parent">
            <ImageView
                    android:layout_width="@dimen/size_80dp"
                    android:layout_height="@dimen/size_80dp" app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/ui_foto" android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="@dimen/size_20dp"/>
              <EditText
                    android:layout_marginBottom="@dimen/size_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="@dimen/size_10dp"
                    android:hint="@string/name"
                    android:background="@drawable/block_corner"
                    android:id="@+id/ui_nama"/>
            <TextView
                    android:text="@string/ubah"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/size_4dp"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:layout_marginBottom="@dimen/size_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="@dimen/size_10dp"
                    android:hint="@string/passwordnew"
                    android:background="@drawable/block_corner"
                    android:id="@+id/ui_password"/>
            <EditText
                    android:layout_marginBottom="@dimen/size_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="@dimen/size_10dp"
                    android:hint="@string/cpasswordbaru"
                    android:background="@drawable/block_corner"
                    android:id="@+id/ui_cpassword"/>
            <Button
                    android:text="@string/update"
                    android:textColor="@color/colorwhite"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/size_20dp"
                    android:background="@drawable/block_corner_green_dark"
                    android:layout_height="wrap_content"
                    android:id="@+id/ui_simpan"/>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>