<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorwhite"
        tools:context=".ui.minus.MinusActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/size_4dp">

            <ImageView
                android:id="@+id/ui_back"
                android:layout_width="@dimen/size_30dp"
                android:layout_height="@dimen/size_30dp"
                app:srcCompat="@drawable/ic_back_w" />

            <TextView
                android:id="@+id/ui_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/miopi"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/text_14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/ui_lay_obj"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/size_10dp"
                    android:gravity="center|top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/size_10dp"
                        android:text="@string/pilih_mata"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/ui_kiri"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/block_corner_green_"
                            android:text="@string/mata_kiri" />

                        <Button
                            android:id="@+id/ui_kanan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/height_20"
                            android:layout_weight="1"
                            android:background="@drawable/block_corner_green_dark"
                            android:text="@string/mata_kanan"
                            android:textColor="@color/colorwhite" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/size_20dp"
                        android:text="@string/coba_tebak"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_14sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/size_20dp"
                        android:text="@string/jauhkan_perangkat"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_14sp" />

                    <LinearLayout
                        android:id="@+id/imageView3"
                        android:layout_width="@dimen/size_160dp"
                        android:layout_height="@dimen/size_160dp"
                        android:background="@drawable/block_corner"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/ui_object"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="1"
                            android:textAlignment="center"
                            android:textSize="8sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/ui_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/size_20dp"
                        android:text="1/10"
                        android:textAlignment="center" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/ui_a_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/size_10dp"
                            android:layout_weight="1"
                            android:background="@drawable/block_corner_green_dark"
                            android:text="8"
                            android:textColor="@color/colorwhite" />

                        <Button
                            android:id="@+id/ui_a_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/size_10dp"
                            android:layout_weight="1"
                            android:background="@drawable/block_corner_green_dark"
                            android:text="6"
                            android:textColor="@color/colorwhite" />

                        <Button
                            android:id="@+id/ui_a_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/size_10dp"
                            android:layout_weight="1"
                            android:background="@drawable/block_corner_green_dark"
                            android:text="3"
                            android:textColor="@color/colorwhite" />

                        <Button
                            android:id="@+id/ui_a_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/block_corner_green_dark"
                            android:text="2"
                            android:textColor="@color/colorwhite" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/ui_tidak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_10dp"
                        android:background="@drawable/block_corner_green_dark"
                        android:text="@string/tidak_tau"
                        android:textColor="@color/colorwhite" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/ui_lay_hasil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_margin="@dimen/size_20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ui_hasil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_100dp"
                android:text="@string/hasil"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/ui_kembali"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:background="@drawable/block_corner_green_dark"
                android:text="@string/kembali"
                android:textColor="@color/colorwhite" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>