<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorwhite"
        tools:context=".ui.pterigium.PterigiumActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/size_4dp"
                android:layout_height="?attr/actionBarSize">
            <ImageView
                    android:layout_width="@dimen/size_30dp"
                    android:layout_height="@dimen/size_30dp"
                    app:srcCompat="@drawable/ic_back_w" android:id="@+id/ui_back"
            />
            <TextView
                    android:text="@string/pterigium"
                    android:textColor="@color/colorwhite"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/ui_nama"/>

        </LinearLayout>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:padding="@dimen/size_10dp"
                        android:background="@color/colorAccent"
                        android:gravity="center"
                        android:layout_height="wrap_content">
                    <ImageView
                            android:layout_marginTop="@dimen/size_20dp"
                            android:layout_width="@dimen/size_100dp"
                            android:layout_height="@dimen/size_100dp" app:srcCompat="@drawable/ic_camera"
                            android:id="@+id/ui_gone_g"/>
                    <TextView
                            android:text="@string/ambil_foto"
                            android:layout_width="match_parent"
                            android:textAlignment="center"
                            android:textColor="@color/colorwhite"
                            android:layout_marginBottom="@dimen/size_20dp"
                            android:layout_height="wrap_content" android:id="@+id/ui_gone_t"/>
                    <ImageView
                            android:visibility="gone"
                            android:layout_width="match_parent"
                            android:scaleType="centerCrop"
                            android:layout_height="@dimen/with_320dp" app:srcCompat="@drawable/block_corner"
                            android:id="@+id/ui_foto"/>
                </LinearLayout>
                <TextView
                        android:text="@string/hasil"
                        android:layout_width="match_parent"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/size_10dp"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:text="@string/tidak_ada_foto"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/size_10dp"
                        android:layout_marginRight="@dimen/size_10dp"
                        android:layout_marginLeft="@dimen/size_10dp"
                        android:padding="@dimen/size_10dp"
                        android:background="@drawable/block_corner_green_dark"
                        android:textAlignment="center"
                        android:textColor="@color/colorwhite"
                        android:layout_height="wrap_content" android:id="@+id/ui_hasil"/>
                <LinearLayout
                        android:id="@+id/ui_acc"
                        android:orientation="vertical"
                        android:visibility="gone"
                        android:background="@drawable/block_corner_green_dark"
                        android:layout_marginTop="@dimen/size_10dp"
                        android:layout_marginLeft="@dimen/size_10dp"
                        android:layout_marginRight="@dimen/size_10dp"
                        android:padding="@dimen/size_10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <ProgressBar
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/progressBar" android:progress="70" android:progressTint="#4CAF50"
                            android:outlineAmbientShadowColor="#9C27B0"/>
                    <TextView
                            android:text="@string/accuracy"
                            android:textColor="@color/colorwhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/ui_text_acc"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/size_10dp"
                        android:layout_marginBottom="@dimen/size_10dp"
                        android:layout_height="wrap_content">
                    <Button
                            android:text="@string/kamera"
                            android:layout_width="match_parent"
                            android:textColor="@color/colorwhite"
                            android:layout_marginRight="@dimen/size_10dp"
                            android:layout_marginLeft="@dimen/size_10dp"
                            android:drawableTop="@drawable/ic_camera_w"
                            android:paddingBottom="@dimen/size_10dp"
                            android:paddingTop="@dimen/size_10dp"
                            android:layout_weight="1"
                            android:background="@drawable/block_corner_green_dark"
                            android:layout_height="wrap_content" android:id="@+id/ui_kamera"/>
                    <Button
                            android:text="@string/galeri"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:textColor="@color/colorwhite"
                            android:drawableTop="@drawable/ic_galeri_w"
                            android:paddingBottom="@dimen/size_10dp"
                            android:paddingTop="@dimen/size_10dp" android:paddingLeft="@dimen/size_10dp"
                            android:textAlignment="center"
                            android:layout_marginRight="@dimen/size_10dp"
                            android:background="@drawable/block_corner_green_dark"
                            android:layout_height="wrap_content" android:id="@+id/ui_galeri"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>